--- a/StudyFocusMobApp/StudyFocusMobApp.csproj
+++ b/StudyFocusMobApp/StudyFocusMobApp.csproj
@@ -56,6 +56,7 @@
 
 	<ItemGroup>
 	  <PackageReference Include="Syncfusion.Maui.Popup" Version="21.1.38" />
+	  <PackageReference Include="Syncfusion.Maui.Sliders" Version="21.1.38" />
 	</ItemGroup>
 
 </Project>
