--- a/StudyFocusMobApp/StudyFocusMobApp.csproj
+++ b/StudyFocusMobApp/StudyFocusMobApp.csproj
@@ -54,9 +54,11 @@
 	  <None Remove="Resources\Images\ic_play.png" />
 	  <None Remove="Resources\Images\ic_settings.png" />
 	  <None Remove="Resources\Images\ic_stop.png" />
+	  <None Remove="Resources\Raw\cycleFinishSound.mp3" />
 	</ItemGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="Plugin.Maui.Audio" Version="1.0.0" />
 	  <PackageReference Include="Syncfusion.Maui.Gauges" Version="21.1.38" />
 	  <PackageReference Include="Syncfusion.Maui.Popup" Version="21.1.38" />
 	  <PackageReference Include="Syncfusion.Maui.Sliders" Version="21.1.38" />
