--- a/StudyFocusMobApp/StudyFocusMobApp.csproj
+++ b/StudyFocusMobApp/StudyFocusMobApp.csproj
@@ -48,6 +48,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Resources\Fonts\Lobster-Regular.ttf" />
 	  <None Remove="Resources\Images\ic_note.png" />
 	  <None Remove="Resources\Images\ic_notification.png" />
 	  <None Remove="Resources\Images\ic_pause.png" />
