--- a/StudyFocusMobApp/StudyFocusMobApp.csproj
+++ b/StudyFocusMobApp/StudyFocusMobApp.csproj
@@ -12,7 +12,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 
 		<!-- Display name -->
-		<ApplicationTitle>StudyFocusMobApp</ApplicationTitle>
+		<ApplicationTitle>Study Focus</ApplicationTitle>
 
 		<!-- App Identifier -->
 		<ApplicationId>com.companyname.studyfocusmobapp</ApplicationId>
@@ -32,7 +32,7 @@
 
 	<ItemGroup>
 		<!-- App Icon -->
-		<MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />
+		<MauiIcon Include="Resources\AppIcon\icon.png" Color="#F3EBA3" />
 
 		<!-- Splash Screen -->
 		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#512BD4" BaseSize="128,128" />
@@ -59,7 +59,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="Plugin.Maui.Audio" Version="1.0.0" />
+	  <PackageReference Include="Plugin.LocalNotification" Version="10.1.4" />
 	  <PackageReference Include="Syncfusion.Maui.Gauges" Version="21.1.38" />
 	  <PackageReference Include="Syncfusion.Maui.Popup" Version="21.1.38" />
 	  <PackageReference Include="Syncfusion.Maui.Sliders" Version="21.1.38" />
