--- a/StudyFocusMobApp/StudyFocusMobApp.csproj
+++ b/StudyFocusMobApp/StudyFocusMobApp.csproj
@@ -32,11 +32,11 @@
 
 	<ItemGroup>
 		<!-- App Icon -->
-		<MauiIcon Include="Resources\AppIcon\icon.png" Color="#F3EBA3" />
+		<MauiIcon Include="Resources\AppIcon\appicon.png" Color="#D8CC5E" />
 
 		<!-- Splash Screen -->
-		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#512BD4" BaseSize="128,128" />
-
+		<MauiSplashScreen Include="Resources\Splash\studysplashscreen.png" BackgroundColor="#D8CC5E" Color="#D8CC5E"/>
+		
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
 
@@ -49,12 +49,18 @@
 
 	<ItemGroup>
 	  <None Remove="Resources\Fonts\Lobster-Regular.ttf" />
+	  <None Remove="Resources\Images\ic_flyout.png" />
+	  <None Remove="Resources\Images\ic_hamburger.svg" />
 	  <None Remove="Resources\Images\ic_note.png" />
 	  <None Remove="Resources\Images\ic_notification.png" />
 	  <None Remove="Resources\Images\ic_pause.png" />
 	  <None Remove="Resources\Images\ic_play.png" />
 	  <None Remove="Resources\Images\ic_settings.png" />
 	  <None Remove="Resources\Images\ic_stop.png" />
+	  <None Remove="Resources\Images\menu.png" />
+	  <None Remove="Resources\Images\statistics.png" />
+	  <None Remove="Resources\Images\stopwatch.png" />
+	  <None Remove="Resources\Images\todo_list.png" />
 	  <None Remove="Resources\Raw\cycleFinishSound.mp3" />
 	</ItemGroup>
 
@@ -63,6 +69,15 @@
 	  <PackageReference Include="Syncfusion.Maui.Gauges" Version="21.1.38" />
 	  <PackageReference Include="Syncfusion.Maui.Popup" Version="21.1.38" />
 	  <PackageReference Include="Syncfusion.Maui.Sliders" Version="21.1.38" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Update="StatisticsPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="TodoPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
