--- a/StudyFocusMobApp/StudyFocusMobApp.csproj
+++ b/StudyFocusMobApp/StudyFocusMobApp.csproj
@@ -35,7 +35,7 @@
 		<MauiIcon Include="Resources\AppIcon\appicon.png" Color="#D8CC5E" />
 
 		<!-- Splash Screen -->
-		<MauiSplashScreen Include="Resources\Splash\studysplashscreen.png" BackgroundColor="#D8CC5E" Color="#D8CC5E"/>
+		<MauiSplashScreen Include="Resources\Splash\studysplashscreen.png" BackgroundColor="#D8CC5E" Color="#D8CC5E" />
 		
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
@@ -49,8 +49,6 @@
 
 	<ItemGroup>
 	  <None Remove="Resources\Fonts\Lobster-Regular.ttf" />
-	  <None Remove="Resources\Images\ic_flyout.png" />
-	  <None Remove="Resources\Images\ic_hamburger.svg" />
 	  <None Remove="Resources\Images\ic_note.png" />
 	  <None Remove="Resources\Images\ic_notification.png" />
 	  <None Remove="Resources\Images\ic_pause.png" />
@@ -66,6 +64,8 @@
 
 	<ItemGroup>
 	  <PackageReference Include="Plugin.LocalNotification" Version="10.1.4" />
+	  <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
+	  <PackageReference Include="SQLitePCLRaw.provider.dynamic_cdecl" Version="2.1.4" />
 	  <PackageReference Include="Syncfusion.Maui.Gauges" Version="21.1.38" />
 	  <PackageReference Include="Syncfusion.Maui.Popup" Version="21.1.38" />
 	  <PackageReference Include="Syncfusion.Maui.Sliders" Version="21.1.38" />
