sqlite working properly
View folder added and pages moved there.
SQLite was working fine in prev commit, but binding name was wrong ID instead of Id

--- a/StudyFocusMobApp/StudyFocusMobApp.csproj
+++ b/StudyFocusMobApp/StudyFocusMobApp.csproj
@@ -72,10 +72,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <MauiXaml Update="StatisticsPage.xaml">
+	  <MauiXaml Update="Views\StatisticsPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
-	  <MauiXaml Update="TodoPage.xaml">
+	  <MauiXaml Update="Views\TodoPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
