--- a/StudyFocusMobApp/StudyFocusMobApp.csproj
+++ b/StudyFocusMobApp/StudyFocusMobApp.csproj
@@ -63,6 +63,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="CommunityToolkit.Maui" Version="2.0.0" />
 	  <PackageReference Include="Plugin.LocalNotification" Version="10.1.4" />
 	  <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
 	  <PackageReference Include="SQLitePCLRaw.provider.dynamic_cdecl" Version="2.1.4" />
