--- a/StudyFocusMobApp/StudyFocusMobApp.csproj
+++ b/StudyFocusMobApp/StudyFocusMobApp.csproj
@@ -62,11 +62,13 @@
 	  <None Remove="Resources\Images\stopwatch.png" />
 	  <None Remove="Resources\Images\todo_list.png" />
 	  <None Remove="Resources\Raw\cycleFinishSound.mp3" />
+	  <None Remove="Resources\Raw\lofi.mp3" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <PackageReference Include="CommunityToolkit.Maui" Version="2.0.0" />
 	  <PackageReference Include="Plugin.LocalNotification" Version="10.1.4" />
+	  <PackageReference Include="Plugin.Maui.Audio" Version="1.0.0" />
 	  <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
 	  <PackageReference Include="SQLitePCLRaw.provider.dynamic_cdecl" Version="2.1.4" />
 	  <PackageReference Include="Syncfusion.Maui.Gauges" Version="21.1.38" />
